adding all test case
